# Ai-eco

./: .env.example  .gitignore  App.tsx  CONTRIBUTING.md  README.md  constants.ts  docker-compose.yml  index.html  metadata.json  package.json  pyproject.toml  requirements.txt  types.ts
.github/: SUPPORT.md
.github/workflows/: ml-ci-cd-ct.yml
agents/memory/: README.md  episodic_memory.py  vector_memory.py
agents/orchestration/: README.md  crew_manager.py  executor.py  planner.py  swarm_logic.py
agents/tools/: README.md  api_tool.py  browser_tool.py  database_tool.py  email_tool.py  git_tool.py  kubectl_tool.py  log_analyzer.py  notion_tool.py  prometheus_tool.py  resume_parser.py  search_tool.py
ci-cd/: quality-gates.yaml
components/: EcosystemGraph.tsx  RepoBrowser.tsx
configs/: base.yaml  development.yaml  feature-flags.yaml  logging.yaml  model-routing.yaml  production.yaml  staging.yaml
data/: README.md
docs/: api-spec.yaml  architecture.md  governance.md  model-lifecycle.md  onboarding.md  runbooks.md  sovereignty-manifesto.md  troubleshooting.md
evaluation/: hallucination-tests.yaml  prompt-tests.yaml  regression-suite.py  safety-checks.yaml
mlops/: README.md
observability/: alerts.yaml  grafana-dashboard.json  prometheus.yaml  tracing.yaml
scripts/: bootstrap.sh  data_prep.py  deploy.sh  evaluate.sh  quantize_model.py  setup_dev.sh
security/: audit_logger.py  compliance-checklist.md  encryption_utils.py  firewall_config.py  guardrails.py  pii-policy.md  redteam-guidelines.md  secrets-template.env  threat-model.md
services/: gemini.ts
(+86 files in other folders)
